--- a/modules/administration/pages/backup-restore.adoc
+++ b/modules/administration/pages/backup-restore.adoc
@@ -69,7 +69,7 @@ For more information about the [command]``smdba`` tool, see xref:administration:
 
 .Procedure: Restore from a Manual Backup
 . Re-install {productname}.
-For more information, see <<config-smdb.recover-root>>.
+For more information about recovering from a backup, see xref:administration:backup-restore.adoc[].
 . Re-synchronize your {productname} repositories with the [command]``mgr-sync`` tool.
 For more information about the [command]``mgr-sync`` tool, see <<syncing.suse.mgr.repositories.scc>>.
 . You can choose to re-register your product, or skip the registration and SSL certificate generation sections.
