--- a/modules/administration/pages/backup-restore.adoc
+++ b/modules/administration/pages/backup-restore.adoc
@@ -82,7 +82,7 @@ rhn-search cleanindex
 +
 This command produces only debug messages.
 It does not produce error messages.
-. Check whether you must restore [path]``/var/spacewalk/packages/``.
+. Check whether you need to restore [path]``/var/spacewalk/packages/``.
 It can be neccessary if you did not have in your backup.
 If the source repository still available, you can restore [path]``/var/spacewalk/packages/`` with a complete channel synchronization:
 +
