--- a/modules/administration/pages/backup-restore.adoc
+++ b/modules/administration/pages/backup-restore.adoc
@@ -84,7 +84,7 @@ This command produces only debug messages.
 It does not produce error messages.
 . Check whether you need to restore [path]``/var/spacewalk/packages/``.
 If [path]``/var/spacewalk/packages/`` was not in your backup, you will need to restore it.
-If the source repository still available, you can restore [path]``/var/spacewalk/packages/`` with a complete channel synchronization:
+If the source repository is available, you can restore [path]``/var/spacewalk/packages/`` with a complete channel synchronization:
 +
 ----
 mgr-sync refresh --refresh-channels
