--- a/modules/administration/pages/backup-restore.adoc
+++ b/modules/administration/pages/backup-restore.adoc
@@ -452,6 +452,7 @@ This section assumes you have setup your server similar to the procedure explain
 .Procedure: Recovering from a Crashed Root Partition
 . Start by installing {productname}.
 Do not mount the [path]``/var/spacewalk`` and [path]``/var/lib/pgsql`` partitions.
+Wait for the installation to complete before going on to the next step.
 . When the installation of {productname} has completed shutdown the services with [command]``spacewalk-service shutdown`` and the database with [command]``rcpostgresql stop``.
 . Mount your [path]``/var/spacewalk`` and [path]``/var/lib/pgsql`` partitions and restore the directories listed in <<backup-restore-product>>.
 . Start {productname} services and the database with [command]``spacewalk-services start`` and [command]``rcpostgresql start``.
