--- a/modules/administration/pages/backup-restore.adoc
+++ b/modules/administration/pages/backup-restore.adoc
@@ -450,7 +450,7 @@ This section provides guidance on restoring your server after its root partition
 This section assumes you have setup your server similar to the procedure explained in Installation guide with separate partitions for the database and for channels mounted at [path]``/var/lib/pgsql`` and [path]``/var/spacewalk/``.
 
 .Procedure: Recovering from a Crashed Root Partition
-. Start by installing {productname}.
+. Install {productname}.
 Do not mount the [path]``/var/spacewalk`` and [path]``/var/lib/pgsql`` partitions.
 Wait for the installation to complete before going on to the next step.
 . Shut down the services with [command]``spacewalk-service shutdown``.
