To end Disconnected Setup

--- a/modules/client-configuration/pages/cobbler.adoc
+++ b/modules/client-configuration/pages/cobbler.adoc
@@ -1,4 +1,4 @@
-[[client-cfg-cobbler]]
+[[cobbler]]
 = Cobbler
 
 Cobbler is an installation server that allows you to perform unattended system installations.
