--- a/modules/client-configuration/pages/salt-client-proxy.adoc
+++ b/modules/client-configuration/pages/salt-client-proxy.adoc
@@ -59,4 +59,4 @@ systemctl restart salt-minion
 salt-key -a 'minion'
 ----
 +
-The minion will connect to the proxy exclusively for Salt operations and normal HTTP package downloads.
+The minion connects to the proxy exclusively for Salt operations and normal HTTP package downloads.
