added sp-vert attribute for use in screen or code blocks

--- a/modules/ROOT/pages/_partials/entities.adoc
+++ b/modules/ROOT/pages/_partials/entities.adoc
@@ -25,8 +25,8 @@
 :saltversion: 2019.2.0
 :webui: Web UI
 :sles-version: 12
-:sp-version: SP3
-:sp-version-l: sp3
+:sp-version: SP1
+//:sp-version-l: sp3
 :jeos: JeOS
 :scc: SUSE Customer Center
 :sls: SUSE Linux Enterprise Server
@@ -51,7 +51,7 @@
 :openscap: OpenSCAP
 :uarr:
 :ncc: Novell Customer Center
-:sp-ver: {sp-version}
+//:sp-ver: {sp-version}
 :rmtool: Repository Management Tool
 :smtool: {rmtool}
 :vmguest: VM Guest
