--- a/modules/administration/pages/tshoot-corruptrepo.adoc
+++ b/modules/administration/pages/tshoot-corruptrepo.adoc
@@ -25,9 +25,9 @@ You can fix this by removing the files and regenerating it.
 With an new repository data file, updates should operate as expected.
 
 .Procedure: Resolving Corrupt Repository Data
-. Remove all files from [path]``/var/cache/rhn/repodata/sles{sles-version}-{sp-version-l}-updates-x86_64``
+. Remove all files from [path]``/var/cache/rhn/repodata/sles{sles-version}-{sp-version}-updates-x86_64``
 . Regenerate the file from the command line:
 +
 ----
-spacecmd softwarechannel_regenerateyumcache sles{sles-version}-{sp-version-l}-updates-x86_64
+spacecmd softwarechannel_regenerateyumcache sles{sles-version}-{sp-version}-updates-x86_64
 ----
