--- a/modules/administration/pages/public-cloud.adoc
+++ b/modules/administration/pages/public-cloud.adoc
@@ -130,6 +130,9 @@ If you experience errors during setup, start a new instance, and begin the setup
 
 If you receive a message that there is not enough space available for setup, ensure that your root volume is at least 20GB and double check that the instructions in <<using-separate-storage-volume>> have been completed correctly.
 
+////
+Commented out per https://github.com/SUSE/spacewalk/issues/8951 LKB 2019-08-06
+
 {productname} Server for the public cloud comes with a bootstrap data module pre-installed.
 The bootstrap module contains optimized package lists for bootstrapping instances started from {sle} images published by {suse}.
 If you intend to register such an instance, when you creatr the bootstrap repository run the [command]``mgr-create-bootstrap-repo`` script using this command, to create a bootstrap repository suitable for {sle} 12 SP1 instances.
@@ -140,6 +143,7 @@ $ mgr-create-bootstrap-repo --datamodule=mgr_pubcloud_bootstrap_data -c SLE-12-S
 
 
 See https://www.suse.com/documentation/suse-manager-3/book.suma.getting-started/data/create_tools_repository.html[Creating the SUSE Manager Tools Repository] for more information on bootstrapping.
+////
 
 Prior to registering instances started from on demand images remove the following packages from the instance to be registered:
 ... cloud-regionsrv-client
@@ -170,7 +174,7 @@ file that contains the *susecloud.net* reference.
 +
 Launch the instance, optionally with external storage configured.
 If you use external storage (recommended), prepare it according to <<using-separate-storage-volume>>.
-It is recommended but not required to prepare the storage before configuring {productname} proxy, as the suma-webui-storage script will migrate any existing cached data to the external storage.
+It is recommended but not required to prepare the storage before configuring {productname} proxy, as the suma-storage script will migrate any existing cached data to the external storage.
 After preparing the instance, register the system with the parent SUSE Manager, which could be a {productname} Server or another {productname} Proxy.
 See the https://www.suse.com/documentation/suse-manager-3/singlehtml/suse_manager21/book_susemanager_proxyquick/book_susemanager_proxyquick.html[ SUSE Manager Proxy Setup guide] for details.
 Once registered, run
@@ -207,7 +211,7 @@ to configure your {productname} Proxy instance.
 [replaceable]``Instance-ID``
 |
 
-[replaceable]``Instance-Name``**-suma-webui**
+[replaceable]``Instance-Name``**-suma**
 |===
 +
 The current value for the [replaceable]``Instance-ID`` or [replaceable]``Instance-Name`` in case of the Azure Cloud, can be obtained from the public cloud Web console or from within a terminal session as follows:
@@ -254,11 +258,11 @@ For sizing information refer to https://www.suse.com/support/kb/doc.php?id=70150
 ----
 $ hwinfo --disk | grep -E "Device File:"
 ----
-. With the device name at hand the process of re-linking the directories in the filesystem {productname} uses to store data is handled by the suma-webui-storage script. In the following example we use [path]``/dev/sdb`` as the device name.
+. With the device name at hand the process of re-linking the directories in the filesystem {productname} uses to store data is handled by the suma-storage script. In the following example we use [path]``/dev/sdb`` as the device name.
 +
 
 ----
-$ /usr/bin/suma-webui-storage /dev/sdb
+$ /usr/bin/suma-storage /dev/sdb
 ----
 +
 After the call all database and repository files used by SUSE Manager Server are moved to the newly created xfs based storage.
