--- a/modules/administration/pages/backup-restore.adoc
+++ b/modules/administration/pages/backup-restore.adoc
@@ -455,7 +455,8 @@ Do not mount the [path]``/var/spacewalk`` and [path]``/var/lib/pgsql`` partition
 Wait for the installation to complete before going on to the next step.
 . Shut down the services with [command]``spacewalk-service shutdown``.
 . Shut down the database with [command]``rcpostgresql stop``.
-. Mount your [path]``/var/spacewalk`` and [path]``/var/lib/pgsql`` partitions and restore the directories listed in <<backup-restore-product>>.
+. Mount [path]``/var/spacewalk`` and [path]``/var/lib/pgsql`` partitions.
+. Restore the directories listed in ***NEEDS PROPER XREF***.
 . Start {productname} services and the database with [command]``spacewalk-services start`` and [command]``rcpostgresql start``.
 . {productname} should now operate normally without loss of your database or synced channels.
 
