--- a/modules/administration/pages/backup-restore.adoc
+++ b/modules/administration/pages/backup-restore.adoc
@@ -456,7 +456,7 @@ Wait for the installation to complete before going on to the next step.
 . Shut down the services with [command]``spacewalk-service shutdown``.
 . Shut down the database with [command]``rcpostgresql stop``.
 . Mount [path]``/var/spacewalk`` and [path]``/var/lib/pgsql`` partitions.
-. Restore the directories listed in ***NEEDS PROPER XREF***.
+. Restore the directories listed in <<backup-restore-product>>.
 . Start {productname} services and the database with [command]``spacewalk-services start`` and [command]``rcpostgresql start``.
 . {productname} should now operate normally without loss of your database or synced channels.
 
