--- a/modules/administration/pages/backup-restore.adoc
+++ b/modules/administration/pages/backup-restore.adoc
@@ -457,7 +457,8 @@ Wait for the installation to complete before going on to the next step.
 . Shut down the database with [command]``rcpostgresql stop``.
 . Mount [path]``/var/spacewalk`` and [path]``/var/lib/pgsql`` partitions.
 . Restore the directories listed in <<backup-restore-product>>.
-. Start {productname} services and the database with [command]``spacewalk-services start`` and [command]``rcpostgresql start``.
+. Start the services with [command]``spacewalk-services start``.
+. Start the database with [command]``rcpostgresql start``.
 . {productname} should now operate normally without loss of your database or synced channels.
 
 
