--- a/modules/administration/pages/auth-methods.adoc
+++ b/modules/administration/pages/auth-methods.adoc
@@ -7,7 +7,7 @@
 
 
 {productname} supports network-based authentication systems via Pluggable Authentication Modules (PAM).
-PAM is a suite of libraries that allows to integrate {productname} with a centralized authentication mechanism, thus eliminating the need to remember multiple passwords.
+PAM is a suite of libraries that allows you to integrate {productname} with a centralized authentication mechanism, eliminating the need to remember multiple passwords.
 {productname} supports LDAP, Kerberos, and other network-based authentication systems via PAM.
 
 
