--- a/modules/administration/pages/auth-methods.adoc
+++ b/modules/administration/pages/auth-methods.adoc
@@ -12,7 +12,7 @@ PAM is a suite of libraries that allows you to integrate {productname} with a ce
 
 
 
-=== Enabling PAM
+=== Enable PAM
 
 To enable {productname} to use PAM in your organization's authentication infrastructure, follow the steps below.
 
