--- a/modules/administration/pages/auth-methods.adoc
+++ b/modules/administration/pages/auth-methods.adoc
@@ -17,7 +17,8 @@ PAM is a suite of libraries that allows you to integrate {productname} with a ce
 To enable {productname} to use PAM in your organization's authentication infrastructure, follow the steps below.
 
 
-. Set up a PAM service file (default location: [path]``/etc/pam.d/susemanager``).
+. Create a PAM service file.
+PAM service files are located in [path]``/etc/pam.d/susemanager`` by default.
 Enforce its use by adding the following line to [path]``/etc/rhn/rhn.conf``:
 +
 
