--- a/modules/administration/pages/auth-methods.adoc
+++ b/modules/administration/pages/auth-methods.adoc
@@ -19,7 +19,7 @@ To enable {productname} to use PAM in your organization's authentication infrast
 
 . Create a PAM service file.
 PAM service files are located in [path]``/etc/pam.d/susemanager`` by default.
-Enforce its use by adding the following line to [path]``/etc/rhn/rhn.conf``:
+Enforce its use by adding this line to [path]``/etc/rhn/rhn.conf``:
 +
 
 ----
