--- a/modules/installation/pages/install-intro.adoc
+++ b/modules/installation/pages/install-intro.adoc
@@ -1,10 +1,6 @@
 [[installation-intro]]
 = Introduction
 
-
-
-
-
 {productname} provides absolute control over your Linux environment.
 System administrators often have tens, hundreds, or even thousands of client machines they need to look after, all of which require ongoing maintenance, updates, and lifecycle management.
 {productname} allows you to manage all your Linux clients in one place, with one easy-to-understand dashboard.
@@ -21,11 +17,8 @@ Because {productname} allows you to manage large numbers of systems and automati
 ifeval::[{productname} == "SUSE Manager"]
 
 From {slsa}{nbsp}15{nbsp}SP1, {susemgr} Server and Proxy are available as base products, and can be installed with the {slsa} Unified Installer.
-This is the simplest method of installation, and the primary method described in this book.
+This is the default method of installation, and the primary method described in this book.
 
 endif::[]
 
-All versions of {productname} can be installed from {productname} installation media.
-Before you begin the installation, you will require an operating system installed on your hardware.
-
-This book guides you through installing the {jeos} operating system in a virtual machine, before performing the {productname} Server and Proxy installations.
+This book also guides you through installing the {jeos} operating system in a virtual machine, before performing the {productname} Server installation.
