--- a/modules/installation/pages/install-vm.adoc
+++ b/modules/installation/pages/install-vm.adoc
@@ -7,13 +7,7 @@
 == Virtual Machine Manager (virt-manager) Settings
 
 This chapter provides the required (KVM) settings for installation of {sle} Just Enough Operating System (JeOS) 15 as the base for {productname}.
-A kernel virtual machine (KVM) combined with Virtual Machine Manager (_virt-manager_) will be used as a sandbox for your first installation.
-
-.{suse} Virtualization Guide
-[TIP]
-====
-For more information on virtualization, see: https://www.suse.com/documentation/sles-15/singlehtml/book_virt/book_virt.html[SUSE Linux Enterprise Virtualization Guide]
-====
+A kernel virtual machine (KVM) combined with Virtual Machine Manager (_virt-manager_) will be used as a sandbox for this installation.
 
 // This section needs revision its still ugly (LKB, KE), but now updated (KE)
 // - 2019-06-19.
@@ -29,20 +23,22 @@ In the following table replace _version_ with the actual product version string.
 | Version:            | SLES_version_-JeOS-for-kvm-and-xen.x86_64-GM.qcow2
 | Memory:             | 4096 MB
 | CPU's:              | 2
-| Storage Format:     |_.qcow2_ 24 GB (Default) JeOS Root Partition
+| Storage Format:     | _.qcow2_ 24 GB (Default) JeOS Root Partition
 | Virtual Disks:      |
 | VirtIO Disk 2       | 101 GB for [path]``/var/spacewalk``
 | VirtIO Disk 3       | 50 GB for [path]``/var/lib/pgsql``
 | VirtIO Disk 4       | 4 GB for swap
 | Name:               | test-setup
-| Network             |Bridge _br0_
+| Network             | Bridge _br0_
 |===
 
-.{suse} Virtualization Guide
+.{sle} Virtualization Guide
 [TIP]
 ====
-For more information on virtualization, see: https://www.suse.com/documentation/sles-12/singlehtml/book_virt/book_virt.html[SUSE Linux Enterprise Virtualization Guide]
+For more information on virtualization, see https://www.suse.com/documentation/sles-15/singlehtml/book_virt/book_virt.html[SUSE Linux Enterprise Virtualization Guide].
 ====
+
+
 
 [[jeos.kvm.settings]]
 == JeOS KVM Settings
@@ -50,9 +46,9 @@ For more information on virtualization, see: https://www.suse.com/documentation/
 Create three additional virtual disks required for the {productname} storage partitions.
 
 .Procedure: Creating the Required Partitions with KVM
-. Create a new virtual machine using the downloaded JeOS KVM image and select menu:Import existing disk image[].
-. Configure RAM and number of CPUs (At least 4 GB RAM and 2 CPUs).
-. Name your KVM machine and select the menu:Customize configuration before install[] check box.
+. Create a new virtual machine using the downloaded JeOS KVM image and select [guimenu]``Import existing disk image``.
+. Configure RAM and number of CPUs (at least 4 GB RAM and 2 CPUs).
+. Name your KVM machine and select the [guimenu]``Customize configuration before install`` check box.
 . Select the btn:[Add Hardware] button and create three new virtual disks with the following specifications.
 These disks will be partitioned and mounted in <<proc.jeos.susemgr.prep>>.
 +
@@ -65,7 +61,7 @@ These disks will be partitioned and mounted in <<proc.jeos.susemgr.prep>>.
 | VirtIO Disk 4        | swap      | 4{nbsp}GB
 |===
 
-. Click menu:Begin Installation[] and your new VM will boot from the JeOS image.
+. Click btn:[Begin Installation] and your new VM will boot from the JeOS image.
 
 Proceed through the basic JeOS installation prompts until you reach the command line.
 
