--- a/modules/administration/pages/auth-methods.adoc
+++ b/modules/administration/pages/auth-methods.adoc
@@ -25,7 +25,7 @@ pam_auth_service = susemanager
 NOTE: This assumes the PAM service file is named [path]``susemanager``.
 +
 
-. Navigate to the menu:Create User[] page to enable a new or existing user to authenticate with PAM
+. In the {productname} {webui}, navigate to menu:Create User[] and enable a new or existing user to authenticate with PAM
 . Select the checkbox labeled [guimenu]``Pluggable Authentication Modules (PAM)`` positioned below the password and password confirmation fields.
 . To authenticate a {slsa} system against Kerberos add the following lines to [path]``/etc/pam.d/susemanager``:
 +
