--- a/modules/administration/pages/auth-methods.adoc
+++ b/modules/administration/pages/auth-methods.adoc
@@ -87,7 +87,7 @@ session  include        common-session
 pam_auth_service = susemanager
 ----
 
-You may now create users with the same id that appears on eDirectory and enable the [guimenu]``Use PAM`` check-box in the {productname} {webui}.
+You can now create users with the same ID used by eDirectory, and check the [guimenu]``Use PAM`` checkbox in the {productname} {webui}.
 
 
 
