--- a/modules/administration/pages/auth-methods.adoc
+++ b/modules/administration/pages/auth-methods.adoc
@@ -26,7 +26,8 @@ NOTE: This assumes the PAM service file is named [path]``susemanager``.
 +
 
 . In the {productname} {webui}, navigate to menu:Create User[] and enable a new or existing user to authenticate with PAM
-. Select the checkbox labeled [guimenu]``Pluggable Authentication Modules (PAM)`` positioned below the password and password confirmation fields.
+. Check the [guimenu]``Pluggable Authentication Modules (PAM)`` checkbox.
+It is below the password and password confirmation fields.
 . To authenticate a {slsa} system against Kerberos add the following lines to [path]``/etc/pam.d/susemanager``:
 +
 
