--- a/modules/administration/pages/auth-methods.adoc
+++ b/modules/administration/pages/auth-methods.adoc
@@ -95,7 +95,7 @@ You can now create users with the same ID used by eDirectory, and check the [gui
 === Example Quest VAS Active Directory Authentication Template
 
 
-If you are using Quest VAS for active directory authentication, you can use the following [path]``/etc/pam.d/susemanager`` file.
+If you are using Quest VAS for active directory authentication, you can use this [path]``/etc/pam.d/susemanager`` file.
 
 ----
 #%PAM-1.0
