--- a/modules/administration/pages/auth-methods.adoc
+++ b/modules/administration/pages/auth-methods.adoc
@@ -165,7 +165,7 @@ After the authentication with the IdP using the user `orgadmin` is successful, y
 
 
 
-=== Enabling SOO
+=== Enable SOO
 
 [NOTE]
 ====
