--- a/modules/administration/pages/auth-methods.adoc
+++ b/modules/administration/pages/auth-methods.adoc
@@ -137,7 +137,7 @@ SSO in {productname} supports:
 SSO in {productname} does not support:
 
 * Product choosing and implementation for the Identity Service Provider (IdP).
-* SAML support for other products (please, check with the respective product documentation).
+* SAML support for other products (check with the respective product documentation).
 
 
 
