--- a/modules/administration/pages/auth-methods.adoc
+++ b/modules/administration/pages/auth-methods.adoc
@@ -28,7 +28,7 @@ NOTE: This assumes the PAM service file is named [path]``susemanager``.
 . In the {productname} {webui}, navigate to menu:Create User[] and enable a new or existing user to authenticate with PAM
 . Check the [guimenu]``Pluggable Authentication Modules (PAM)`` checkbox.
 It is below the password and password confirmation fields.
-. To authenticate a {slsa} system against Kerberos add the following lines to [path]``/etc/pam.d/susemanager``:
+. To authenticate a {slsa} system against Kerberos, add these lines to [path]``/etc/pam.d/susemanager``:
 +
 
 ----
