Move timeouts to own page

--- a/modules/salt/nav-salt-guide.adoc
+++ b/modules/salt/nav-salt-guide.adoc
@@ -48,6 +48,8 @@ include::modules/salt/pages/salt-example-formula.adoc[leveloffset=+1]
 
 include::modules/salt/pages/salt-ssh.adoc[leveloffset=+1]
 
+include::modules/salt/pages/salt-timeouts.adoc[leveloffset=+1]
+
 include::modules/salt/pages/salt-rate-limiting.adoc[leveloffset=+1]
 
 include::modules/salt/pages/scale-minions.adoc[leveloffset=+1]
