Big Scale: add warning about non-minions

--- a/modules/salt/pages/salt-big-scale.adoc
+++ b/modules/salt/pages/salt-big-scale.adoc
@@ -25,3 +25,8 @@ The minimum requirements for the {productname} Server are:
 ** the exact number of clients should be chosen taking network bandwidth considerations into account (see below)
 * {productname} Proxy instances require at least 2 recent {x86} cores, 16 GiB of RAM and sufficient storage for caching
 * clients should never be directly attached to the {productname} Server (except possibly a small number for testing purposes)
+
+[WARNING]
+====
+Large installations require regular Salt minions, suggestions in this chapter assume no traditional clients or Salt SSH minions are employed.
+====
