--- a/modules/administration/pages/auth-methods.adoc
+++ b/modules/administration/pages/auth-methods.adoc
@@ -39,7 +39,7 @@ password include        common-password
 session  include        common-session
 ----
 +
-NOTE: To register a Red Hat Enterprise Linux System with Kerberos add the following lines to [path]``/etc/pam.d/susemanager``:
+To authenticate a {rhel} system against Kerberos, add these lines to [path]``/etc/pam.d/susemanager``:
 
 ----
 #%PAM-1.0
