--- a/modules/administration/pages/auth-methods.adoc
+++ b/modules/administration/pages/auth-methods.adoc
@@ -81,7 +81,7 @@ password include        common-password
 session  include        common-session
 ----
 
-. Finally add the following line to the {productname} conf file [filename]``/etc/rhn/rhn.conf``:
+. Add these lines to the {productname} configuration file at [filename]``/etc/rhn/rhn.conf``:
 +
 
 ----
