--- a/modules/administration/pages/auth-methods.adoc
+++ b/modules/administration/pages/auth-methods.adoc
@@ -50,7 +50,8 @@ account     required      pam_krb5.so no_user_check
 ----
 +
 
-YaST can now be used to configure PAM, when packages such as [package]``yast2-ldap-client`` and [package]``yast2-kerberos-client`` are installed.
+YaST can be used to configure PAM.
+You will need to install the [package]``yast2-ldap-client`` and [package]``yast2-kerberos-client`` packages.
 For information about configuring PAM, see the SUSE Linux Enterprise Server Security Guide https://www.suse.com/documentation/sles-15/book_security/data/part_auth.html.
 This example is not limited to Kerberos; it is generic and uses the current server configuration.
 Only network based authentication services are supported.
