--- a/modules/salt/pages/salt-timeouts.adoc
+++ b/modules/salt/pages/salt-timeouts.adoc
@@ -57,3 +57,18 @@ Defaults to 4 seconds.
 The presence ping gather job parameter changes the timeout setting for gathering the presence ping, in seconds.
 Adjust the [systemitem]``java.salt_presence_ping_gather_job_timeout`` parameter.
 Defaults to 1 second.
+
+
+== Salt SSH Clients (SSH Push)
+
+Salt SSH clients are slightly different that regular clients (zeromq). Salt SSH clients do not use Salt PUB/RET channels but a wrapper Salt command inside of an SSH call.
+Salt `timeout` and `gather_job_timeout` are not playing a role here.
+
+{productname} defines a timeout for SSH connections in [path]``/etc/rhn/rhn.conf``:
+
+----
+# salt_ssh_connect_timeout = 180
+----
+
+The presence ping mechanism is also working with SSH clients.
+In this case, {productname} will use `salt_presence_ping_timeout` to override the default timeout value for SSH connections.
