--- a/modules/salt/nav-salt-guide.adoc
+++ b/modules/salt/nav-salt-guide.adoc
@@ -13,7 +13,7 @@ ifndef::backend-pdf[]
 ** xref:salt-example-formula.adoc[Example Formula]
 ** xref:salt-ssh.adoc[SSH Integration]
 ** xref:salt-rate-limiting.adoc[Rate Limiting]
-** xref:scale-minions.adoc[Scaling Salt Minions]
+** xref:salt-big-scale.adoc[Scaling Salt Minions]
 //** xref:common_gfdl1.2_i.adoc[License]
 
 endif::[]
@@ -52,7 +52,7 @@ include::modules/salt/pages/salt-timeouts.adoc[leveloffset=+1]
 
 include::modules/salt/pages/salt-rate-limiting.adoc[leveloffset=+1]
 
-include::modules/salt/pages/scale-minions.adoc[leveloffset=+1]
+include::modules/salt/pages/salt-big-scale.adoc[leveloffset=+1]
 
 include::modules/salt/pages/common_gfdl1.2_i.adoc[leveloffset=+1]
 
